--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: MohrWorld
 # Short bio or description (displayed in the header)
 description: This is the personal page of Santiago Moreira
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: ../images/mohr_logo.png
 
 #
 # Flags below are optional
