--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: MohrWorld
 # Short bio or description (displayed in the header)
 description: This is the personal page of Santiago Moreira
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ./images/mohr_logo.png
+avatar: https://github.com/mohr-sm/mohr-sm.github.io/blob/master/images/mohr_logo.jpg
 
 #
 # Flags below are optional
