changing photos to avatar image

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: MohrWorld
 # Short bio or description (displayed in the header)
 description: This is the personal website of Santiago Moreira
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://mohr-sm.github.io/images/mohr_logo2.png
+avatar: https://avatars3.githubusercontent.com/u/6890978?v=3&s=460
 
 #
 # Flags below are optional
