--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: MohrWorld
+name: Santiago Moreira
 # Short bio or description (displayed in the header)
-description: This is the personal website of Santiago Moreira
+description: This is my personal website, welcome!
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/6890978?v=3&s=460
 
